--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo-font": "^12.0.10",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
@@ -43,7 +46,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
-  },
+  },  
   "engines": {
     "node": ">=18"
   }
