--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-config": "^1.5.3",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
@@ -46,7 +48,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
-  },  
+  },
   "engines": {
     "node": ">=18"
   }
