--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-config": "^1.5.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-simple-toast": "^3.3.1",
