--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,10 @@ react {
     /* Autolinking */
     autolinkLibrariesWithApp()
 }
+// In android/app/build.gradle, under the `react` block
+project.ext.react = [
+    enableHermes: false  // Set to false to disable Hermes
+]
 
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
