--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.10.2",
@@ -24,8 +25,9 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-simple-toast": "^3.3.1",
